--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-icons": "^4.6.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
   },
